@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 10),
                libqt5opengl5-dev (>= 5.9.2+dfsg~),
                libqt5sql5-sqlite (>= 5.9.2+dfsg~),
                pkg-kde-tools,
-               qtbase5-private-dev (>= 5.9.2+dfsg~),
+               qtbase5-private-dev (>= 5.9.2+dfsg-3~),
                qtdeclarative5-private-dev (>= 5.9.2~),
                zlib1g-dev
 Build-Depends-Indep: qtbase5-doc-html (>= 5.9.2+dfsg~)
@@ -47,6 +47,7 @@ Description: Qt 5 Designer components module
 
 Package: qdbus-qt5
 Architecture: any
+Multi-Arch: foreign
 Section: utils
 Depends: qtchooser, ${misc:Depends}, ${shlibs:Depends}
 Description: Qt 5 D-Bus tool
@@ -100,7 +101,7 @@ Description: Qt 5 tools private development files
 
 Package: qttools5-dev-tools
 Architecture: any
-Multi-Arch: same
+Multi-Arch: foreign
 Section: devel
 Depends: qtchooser, ${misc:Depends}, ${shlibs:Depends}
 Recommends: libqt5sql5-sqlite
