@@ -1,1 +1,1 @@
-usr/lib/*/qt5/bin/qdbus
+usr/lib/qt5/bin/qdbus
