@@ -1,22 +1,22 @@
 usr/lib/*/cmake/Qt5LinguistTools/Qt5LinguistToolsConfig.cmake
 usr/lib/*/cmake/Qt5LinguistTools/Qt5LinguistToolsConfigVersion.cmake
 usr/lib/*/cmake/Qt5LinguistTools/Qt5LinguistToolsMacros.cmake
-usr/lib/*/qt5/bin/assistant
-usr/lib/*/qt5/bin/designer
-usr/lib/*/qt5/bin/lconvert
-usr/lib/*/qt5/bin/linguist
-usr/lib/*/qt5/bin/lrelease
-usr/lib/*/qt5/bin/lupdate
-usr/lib/*/qt5/bin/pixeltool
-usr/lib/*/qt5/bin/qcollectiongenerator
-usr/lib/*/qt5/bin/qdbusviewer
-usr/lib/*/qt5/bin/qdoc
-usr/lib/*/qt5/bin/qhelpconverter
-usr/lib/*/qt5/bin/qhelpgenerator
-usr/lib/*/qt5/bin/qtattributionsscanner
-usr/lib/*/qt5/bin/qtdiag
-usr/lib/*/qt5/bin/qtpaths
-usr/lib/*/qt5/bin/qtplugininfo
+usr/lib/qt5/bin/assistant
+usr/lib/qt5/bin/designer
+usr/lib/qt5/bin/lconvert
+usr/lib/qt5/bin/linguist
+usr/lib/qt5/bin/lrelease
+usr/lib/qt5/bin/lupdate
+usr/lib/qt5/bin/pixeltool
+usr/lib/qt5/bin/qcollectiongenerator
+usr/lib/qt5/bin/qdbusviewer
+usr/lib/qt5/bin/qdoc
+usr/lib/qt5/bin/qhelpconverter
+usr/lib/qt5/bin/qhelpgenerator
+usr/lib/qt5/bin/qtattributionsscanner
+usr/lib/qt5/bin/qtdiag
+usr/lib/qt5/bin/qtpaths
+usr/lib/qt5/bin/qtplugininfo
 usr/lib/*/qt5/plugins/designer/libqquickwidget.so
 usr/lib/*/qt5/plugins/designer/libqwebview.so
 usr/share/qt5/phrasebooks/danish.qph
