@@ -1,5 +1,11 @@
 qttools-opensource-src (5.9.2-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Update for Qt binaries location change in qtbase 5.9.2+dfsg-3.
+    - Update .install files for qttools5-dev-tools and qdbus-qt5.
+    - Make these packages Multi-Arch: foreign.
+    - Provide compatibility symlinks for the old location.
+    - Bump qtbase5-dev build-dependency to 5.9.2+dfsg-3.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 19 Oct 2017 22:49:02 +0300
 
